--- a/src/Razor/test/testapps/PackageLibraryDirectDependency/PackageLibraryDirectDependency.csproj
+++ b/src/Razor/test/testapps/PackageLibraryDirectDependency/PackageLibraryDirectDependency.csproj
@@ -36,7 +36,7 @@
 
   <ItemGroup>
     <Content Include="build\**" Pack="true" PackagePath="build" />
-    <Content Update="wwwroot\**" Pack="true" PackagePath="razorContent" />
+    <Content Include="wwwroot\**" Pack="true" PackagePath="razorContent" />
     <ProjectReference Include="..\PackageLibraryTransitiveDependency\PackageLibraryTransitiveDependency.csproj" />
   </ItemGroup>
 
