Check the assembly gets embedded only when there are static assets

--- a/src/Razor/test/testapps/RestoreTestProjects/RestoreTestProjects.csproj
+++ b/src/Razor/test/testapps/RestoreTestProjects/RestoreTestProjects.csproj
@@ -34,7 +34,7 @@
     <MSBuild
       Projects="..\PackageLibraryDirectDependency\PackageLibraryDirectDependency.csproj;
                 ..\PackageLibraryTransitiveDependency\PackageLibraryTransitiveDependency.csproj"      
-      Targets="Pack"
+      Targets="Restore;Pack"
     />
   </Target>
 
