--- a/src/Razor/test/testapps/PackageLibraryTransitiveDependency/PackageLibraryTransitiveDependency.csproj
+++ b/src/Razor/test/testapps/PackageLibraryTransitiveDependency/PackageLibraryTransitiveDependency.csproj
@@ -37,7 +37,8 @@
 
   <ItemGroup>
     <Content Include="build\**" Pack="true" PackagePath="buildTransitive" />
-    <Content Include="wwwroot\**" Pack="true" PackagePath="razorContent" />
+    <!-- We will remove the line below when we do the item to support packing -->
+    <Content Update="wwwroot\**" Pack="true" PackagePath="razorContent" />
   </ItemGroup>
 
 </Project>
